--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "coverage": "react-scripts test --coverage"
+        "coverage": "react-scripts test --coverage --watchAll"
     },
     "eslintConfig": {
         "extends": "react-app"
